examples/errors/parsing/sort-parametric-empty.cn
fun f : List() -> Int [pure] = {
  xs -> 0
}

main : () [impure] = ()
